--- a/home.html
+++ b/home.html
@@ -94,11 +94,15 @@
                     <div class="col-md-6 about-us-text">
                         <h2 class="title">About Us</h2>
                         <h5 class="description">
-                            According to the National
-                            Oceanic and Atmospheric Administration, Ted, Scambos,
-                            NSIDClead scentist, puts the potentially record low
-                            maximum sea ice extent tihs year down to low ice extent
-                            in the Pacific and a late drop in ice extent in the Barents Sea.
+                            Cececa Ltd is a Scent Marketing and Odour Management business offering a range of high
+                            quality scent diffusion systems and fragrances to create the ultimate ambience in your
+                            commercial environment, at home and for special events.
+                            With a presence in Europe and as pioneers in Africa, we have years of extensive experience
+                            in providing world-class aircare solutions to a variety of distinguished brands.
+                            <br/><br/>
+                            We are scent connoisseurs with access to a unique portfolio of couture and bespoke
+                            fragrances from around the world. Our goal is to transform your world through the power of
+                            fragrance, and our process is easy, accessible and affordable.
                         </h5>
                         <div class="separator separator-primary"></div>
                     </div>
@@ -112,7 +116,7 @@
                 <div class="col-sm-6 ml-auto mr-auto text-center">
                     <h5 class="description">
                         We are 100 times more likely to remember something we smell,
-                        rather than something we touch, hear of feel
+                        rather than something we touch, hear or feel
                     </h5>
                 </div>
                 <div class="separator separator-primary"></div><br/>
@@ -169,20 +173,24 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p class="description text-white">
-                            According to the National
-                            Oceanic and Atmospheric Administration, Ted, Scambos,
-                            NSIDClead scentist, puts the potentially record low
-                            maximum sea ice extent tihs year down to low ice extent
-                            in the Pacific and a late drop in ice extent in the Barents Sea.
+                            The sense of smell is our most powerful yet overlooked sense. It is the one most closely linked
+                            to our memories and wellbeing. It has the power to stimulate us into higher levels of activity,
+                            relax and calm us down, and create the ambient conditions for experiences we’ll never forget.
+                            <br/><br/>
+                            Simply put, scent marketing is using scent as a highly effective tool to fragrance commercial
+                            spaces, creating unforgettable memories, marketing and branding, and differentiating your
+                            customer, client or guest experience.
+
                         </p>
                     </div>
                     <div class="col-sm-6">
                         <p class="description text-light">
-                            According to the National
-                            Oceanic and Atmospheric Administration, Ted, Scambos,
-                            NSIDClead scentist, puts the potentially record low
-                            maximum sea ice extent tihs year down to low ice extent
-                            in the Pacific and a late drop in ice extent in the Barents Sea.
+                            At Cececa, our distinctive edge is that, unlike any other provider, we combine our passion for
+                            fragrance with strong marketing, event management and business development expertise; delivering
+                            a one-stop shop, all inclusive ambient marketing service.
+                            <br/><br/>
+                            We are uniquely positioned to use Scent Marketing to transform client, employee, and guest
+                            experiences that will ultimately increase your business performance and bottom line.
                         </p>
                     </div>
                     <div class="separator separator-primary"></div>
@@ -292,9 +300,9 @@
                         <div class="p-5" style="margin-top:100px">
                             <h4 class="text-uppercase text_align-left">Odour Management</h4>
                             <p>
-                                In partnering with Cececa, you may decide to extend
-                                your brand scent to corporate gifts such as; white
-                                label candles, reed diffusers and more
+                                As an fully fledged aircare business we also deal with neutralising malodours from kitchen
+                                areas to bathrooms. We have you covered. Get in contact to find out more about our
+                                cost-effective odour management systems.
                             </p>
                         </div>
                     </div>
@@ -304,9 +312,9 @@
                         <div class="p-5" style="margin-top:70px">
                             <h4 class="text-uppercase text_align-left">Events</h4>
                             <p>
-                                In partnering with Cececa, you may decide to extend
-                                your brand scent to corporate gifts such as; white
-                                label candles, reed diffusers and more
+                                As an fully fledged aircare business we also deal with neutralising malodours from kitchen
+                                areas to bathrooms. We have you covered. Get in contact to find out more about our
+                                cost-effective odour management systems.
                             </p>
                         </div>
                     </div>
