--- a/home.html
+++ b/home.html
@@ -319,7 +319,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
-                        <img class="img-fluid" src="assets/img/odour.jpg" />
+                        <img class="img-fluid" src="assets/img/Odour.jpg" />
                     </div>
                     <div class="col-sm-6">
                         <div class="p-5" style="margin-top:10px">
