--- a/home.html
+++ b/home.html
@@ -334,13 +334,49 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
-                        <div class="p-5" style="margin-top:10px">
+                        <div class="p-3" style="margin-top:10px">
                             <h4 class="text-uppercase text_align-left">Events</h4>
-                            <p>
-                                As an fully fledged aircare business we also deal with neutralising malodours from kitchen
-                                areas to bathrooms. We have you covered. Get in contact to find out more about our
-                                cost-effective odour management systems.
-                            </p>
+                            <div class="events-carousel">
+                                <div>
+                                    <p>
+                                        <h4 class="">Creating unforgettable memories</h4>
+                                        The venue was great, the food delightful, the atmosphere electric,
+                                        the guests had a good time – and yet something was missing – an aroma to savour,
+                                        a fragrance to excite your senses, a scent to make your event literally
+                                        “Scentsational”…...
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <span class="text-danger">Cececa excels at creating phenomenal events through extraordinary
+                                            scent experiences.
+                                        </span>
+                                        <br/><br/>
+                                        Whether it’s a wedding, birthday party, corporate event or special occasion, we will dramatically
+                                        transform your event through the power of fragrance using environmentally friendly, couture
+                                        fragrances and cutting edge scent diffusion systems - all at an affordable price.
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                    By working with us you can:
+                                    <ul>
+                                        <li>
+                                            Choose and manage the ambience of your event – whether it’s fun, zesty, lively; sophisticated,
+                                        sensuous, relaxed; an extension of your corporate brand; or totally unconventional, zany,
+                                            and eccentric
+                                        </li>
+                                        <li>
+                                                Positively impact on your guests feelings and emotions – scientific research has shown
+                                            that over 70% of our emotions are based on what we smell
+                                        </li>
+                                        <li>
+                                                Create unforgettable memories - we are 100 times more likely to remember something we smell than something we see, hear or touch.
+                                        </li>
+                                    </ul>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
@@ -598,6 +634,15 @@
             infinite: true,
             speed: 300,
             autoplay: true,
+        });
+
+        $(".events-carousel").slick({
+            dots: true,
+            vertical: true,
+            centerMode: false,
+            infinite: false,
+            speed: 300,
+            autoplay: false,
         });
 
 
