added events slider

--- a/home.html
+++ b/home.html
@@ -275,7 +275,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="">
-                                <img src="assets/places/Spas and Salons.jpg" alt="Thumbnail Image" class="img-fluid">
+                                <img src="assets/places/Spas-and-Salons.jpg" alt="Thumbnail Image" class="img-fluid">
                                 <h4 class="title">Spas and Salons</h4>
                                 <p class="category text-primary"></p>
                                 <p class="description">
@@ -334,7 +334,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
-                        <div class="p-3" style="margin-top:10px">
+                        <div class="p-5" style="margin-top:10px">
                             <h4 class="text-uppercase text_align-left">Events</h4>
                             <div class="events-carousel">
                                 <div>
@@ -371,7 +371,8 @@
                                             that over 70% of our emotions are based on what we smell
                                         </li>
                                         <li>
-                                                Create unforgettable memories - we are 100 times more likely to remember something we smell than something we see, hear or touch.
+                                            Create unforgettable memories - we are 100 times more likely to remember something we smell
+                                            than something we see, hear or touch.
                                         </li>
                                     </ul>
                                     </p>
