new slider update

--- a/home.html
+++ b/home.html
@@ -185,13 +185,13 @@
                 </div>
             </div>
         </div>
-        <div class="section section-scent-marketing text-center" id="scent-marketing">
+        <div class="section section-scent-marketing" id="scent-marketing">
             <div class="container">
-                <h2 class="title text-light">Scent Marketing</h2>
-                <h4 class="text-light">What is Scent Marketing?</h4>
+                <h2 class="title text-light text-center">Scent Marketing</h2>
+                <h4 class="text-light text-center">What is Scent Marketing?</h4>
                 <div class="row">
                     <div class="col-sm-6">
-                        <p class="description text-white">
+                        <h5 class="description text_align-left text-white">
                             The sense of smell is our most powerful yet overlooked sense. It is the one most closely linked
                             to our memories and wellbeing. It has the power to stimulate us into higher levels of activity,
                             relax and calm us down, and create the ambient conditions for experiences we’ll never forget.
@@ -200,17 +200,17 @@
                             spaces, creating unforgettable memories, marketing and branding, and differentiating your
                             customer, client or guest experience.
 
-                        </p>
+                        </h5>
                     </div>
                     <div class="col-sm-6">
-                        <p class="description text-light">
+                        <h5 class="description text_align-left text-light">
                             At Cececa, our distinctive edge is that, unlike any other provider, we combine our passion for
                             fragrance with strong marketing, event management and business development expertise; delivering
                             a one-stop shop, all inclusive ambient marketing service.
                             <br/><br/>
                             We are uniquely positioned to use Scent Marketing to transform client, employee, and guest
                             experiences that will ultimately increase your business performance and bottom line.
-                        </p>
+                        </h5>
                     </div>
                     <div class="separator separator-primary"></div>
                 </div>
@@ -288,7 +288,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="">
-                                <img src="assets/places/Spas-and-Salons.jpg" alt="Thumbnail Image" class="img-fluid">
+                                <img src="assets/places/Spas-and-salons.jpg" alt="Thumbnail Image" class="img-fluid">
                                 <h4 class="title">Spas and Salons</h4>
                                 <p class="category text-primary"></p>
                                 <p class="description">
@@ -629,6 +629,7 @@
 <script src="assets/js/now-ui-kit.js?v=1.1.0" type="text/javascript"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="assets/slick/slick.min.js"></script>
+<script type="text/javascript" src="assets/js/modernizr.custom.86080.js"></script>
 <script>
     $(function(){
         $('.clients').slick({
@@ -656,7 +657,7 @@
             centerMode: false,
             infinite: false,
             speed: 300,
-            autoplay: false,
+            autoplay: true,
         });
 
 
