--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
     <!-- Slick Files -->
     <link rel="stylesheet" type="text/css" href="assets/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="assets/slick/slick-theme.css"/>
@@ -217,6 +218,97 @@
 
             </div>
         </div>
+        <div class="section section-our-solutions text-center" id="our-solutions">
+            <div class="container">
+                <h2 class="title">Our Solutions</h2>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="p-5" style="margin-top:5px">
+                            <h4 class="text-uppercase text_align-left">Scent Diffusion Systems</h4>
+                            <p>
+                                Our diverse range of fragrances and diffusion systems, provide the ultimate choice,
+                                flexibility and quality that will stimulate a positive sensory impact on your business.
+
+                                Our scent diffusion technology is simple with easy to use controls and ample supplies of
+                                fragrance oils, covering offices, hotels, shops, and other corporate facilities of any size.
+                                We work with the best scent technology companies and perfumeries in the world to produce
+                                exquisite fragrances that will set your business apart
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <img class="img-fluid" src="assets/img/6.jpg" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <img class="img-fluid" src="assets/img/Odour.jpg" />
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="p-5" style="margin-top:10px">
+                            <h4 class="text-uppercase text_align-left">Odour Management</h4>
+                            <p>
+                                As an fully fledged aircare business we also deal with neutralising malodours from kitchen
+                                areas to bathrooms. We have you covered. Get in contact to find out more about our
+                                cost-effective odour management systems.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="" style="margin-top:10px">
+                            <h4 class="text-uppercase text_align-left">Events</h4>
+                            <div class="events-carousel">
+                                <div>
+                                    <p>
+                                    <h4 class="">Creating unforgettable memories</h4>
+                                    The venue was great, the food delightful, the atmosphere electric,
+                                    the guests had a good time – and yet something was missing – an aroma to savour,
+                                    a fragrance to excite your senses, a scent to make your event literally
+                                    “Scentsational”…...
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        <span class="text-danger">Cececa excels at creating phenomenal events through extraordinary
+                                            scent experiences.
+                                        </span>
+                                        <br/><br/>
+                                        Whether it’s a wedding, birthday party, corporate event or special occasion, we will dramatically
+                                        transform your event through the power of fragrance using environmentally friendly, couture
+                                        fragrances and cutting edge scent diffusion systems - all at an affordable price.
+                                    </p>
+                                </div>
+                                <div>
+                                    <p>
+                                        By working with us you can:
+                                    <ul>
+                                        <li>
+                                            Choose and manage the ambience of your event – whether it’s fun, zesty, lively; sophisticated,
+                                            sensuous, relaxed; an extension of your corporate brand; or totally unconventional, zany,
+                                            and eccentric
+                                        </li>
+                                        <li>
+                                            Positively impact on your guests feelings and emotions – scientific research has shown
+                                            that over 70% of our emotions are based on what we smell
+                                        </li>
+                                        <li>
+                                            Create unforgettable memories - we are 100 times more likely to remember something we smell
+                                            than something we see, hear or touch.
+                                        </li>
+                                    </ul>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <img class="img-fluid" src="assets/our-solution/9.jpg" />
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="section section-places text-center" id="places">
             <div class="container">
                 <!--<h2 class="title"></h2>-->
@@ -308,106 +400,14 @@
                 </div>
             </div>
         </div>
-        <div class="section section-our-solutions text-center" id="our-solutions">
-            <div class="container">
-                <h2 class="title">Our Solutions</h2>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="p-5" style="margin-top:5px">
-                            <h4 class="text-uppercase text_align-left">Scent Diffusion Systems</h4>
-                            <p>
-                                Our diverse range of fragrances and diffusion systems, provide the ultimate choice,
-                                flexibility and quality that will stimulate a positive sensory impact on your business.
-
-                                Our scent diffusion technology is simple with easy to use controls and ample supplies of
-                                fragrance oils, covering offices, hotels, shops, and other corporate facilities of any size.
-                                We work with the best scent technology companies and perfumeries in the world to produce
-                                exquisite fragrances that will set your business apart
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <img class="img-fluid" src="assets/img/6.jpg" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <img class="img-fluid" src="assets/img/Odour.jpg" />
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="p-5" style="margin-top:10px">
-                            <h4 class="text-uppercase text_align-left">Odour Management</h4>
-                            <p>
-                                As an fully fledged aircare business we also deal with neutralising malodours from kitchen
-                                areas to bathrooms. We have you covered. Get in contact to find out more about our
-                                cost-effective odour management systems.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="" style="margin-top:10px">
-                            <h4 class="text-uppercase text_align-left">Events</h4>
-                            <div class="events-carousel">
-                                <div>
-                                    <p>
-                                        <h4 class="">Creating unforgettable memories</h4>
-                                        The venue was great, the food delightful, the atmosphere electric,
-                                        the guests had a good time – and yet something was missing – an aroma to savour,
-                                        a fragrance to excite your senses, a scent to make your event literally
-                                        “Scentsational”…...
-                                    </p>
-                                </div>
-                                <div>
-                                    <p>
-                                        <span class="text-danger">Cececa excels at creating phenomenal events through extraordinary
-                                            scent experiences.
-                                        </span>
-                                        <br/><br/>
-                                        Whether it’s a wedding, birthday party, corporate event or special occasion, we will dramatically
-                                        transform your event through the power of fragrance using environmentally friendly, couture
-                                        fragrances and cutting edge scent diffusion systems - all at an affordable price.
-                                    </p>
-                                </div>
-                                <div>
-                                    <p>
-                                    By working with us you can:
-                                    <ul>
-                                        <li>
-                                            Choose and manage the ambience of your event – whether it’s fun, zesty, lively; sophisticated,
-                                        sensuous, relaxed; an extension of your corporate brand; or totally unconventional, zany,
-                                            and eccentric
-                                        </li>
-                                        <li>
-                                                Positively impact on your guests feelings and emotions – scientific research has shown
-                                            that over 70% of our emotions are based on what we smell
-                                        </li>
-                                        <li>
-                                            Create unforgettable memories - we are 100 times more likely to remember something we smell
-                                            than something we see, hear or touch.
-                                        </li>
-                                    </ul>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <img class="img-fluid" src="assets/our-solution/9.jpg" />
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="section section-testimonials text-center" id="testimonials">
-            <div class="backgrounnd-fade"></div>
             <div class="container">
                 <div class="">
-                    <h2 class="title">Client Testimonials</h2>
+                    <h2 class="title text-white">Client Testimonials</h2>
                 </div>
                 <div class="client-testimonials">
                     <div class="col-sm-8 ml-auto mr-auto">
-                    <p class="description text-light">
+                    <p class="description text-white">
                         The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer,
                         and that process will continue whatever happens with climate change. Even if the
                         Arctic continues to be one of the fastest-warming regions of the world, it will
